<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/displayheightpx" />

            <TextView
                android:id="@+id/displayheightpx"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/displaywidthpx" />

            <TextView
                android:id="@+id/displaywidthpx"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/displaydensity" />

            <TextView
                android:id="@+id/displaydensity"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/displayheight" />

            <TextView
                android:id="@+id/displayheight"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/displaywidth" />

            <TextView
                android:id="@+id/displaywidth"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/foregroundAppThreshold" />

            <TextView
                android:id="@+id/foregroundAppThreshold"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/visibleAppThreshold" />

            <TextView
                android:id="@+id/visibleAppThreshold"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/secondaryServerThreshold" />

            <TextView
                android:id="@+id/secondaryServerThreshold"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/hiddenAppThreshold" />

            <TextView
                android:id="@+id/hiddenAppThreshold"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/contentProviderThreshold" />

            <TextView
                android:id="@+id/contentProviderThreshold"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/emptyAppThreshold" />

            <TextView
                android:id="@+id/emptyAppThreshold"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>
    </TableLayout>

</LinearLayout>